--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
             <form class="formulario">
                 <label for="inputNome">
                     <span class="texto">Cardholder Name</span>
-                    <input type="text" class="input" id="inputNome" placeholder="e.g. Jane Appleseed" required>
+                    <input type="text" class="input" id="inputNome" placeholder="e.g. Jane Appleseed" required oninput="this.value = this.value.replace(/[^A-Za-z. ]/g, '').replace(/(\..*?)\..*/g, '$1');">
                     <span class="erro">mensagem de erro!</span>
                 </label>
                 
                 <label for="inputNumero">
                     <span class="texto">Card Number</span>
-                    <input type="text" class="input" id="inputNumero" placeholder="e.g. 1234 5678 9123 0000" required>
+                    <input type="text" class="input" id="inputNumero" placeholder="e.g. 1234 5678 9123 0000" minlength="16" maxlength="16" required oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*?)\..*/g, '$1');">
                     <span class="erro">mensagem de erro!</span>
                 </label>
 
@@ -38,18 +38,18 @@
                     <label for="inputMes">
                         <span class="texto">Exp. Date (MM/YY)</span>
                         <div>
-                            <input type="text" class="input" id="inputMes" placeholder="MM" maxlength="2" required>
-                            <input type="text" class="input" id="inputAno" placeholder="YY" maxlength="2" required>
+                            <input type="text" class="input" id="inputMes" placeholder="MM" minlength="2" maxlength="2" required oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*?)\..*/g, '$1');">
+                            <input type="text" class="input" id="inputAno" placeholder="YY" minlength="2" maxlength="2" required oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*?)\..*/g, '$1');">
+                            <span class="erro">mensagem de erro!</span>
                         </div>
-                        <span class="erro">mensagem de erro!</span>
                     </label>
                     <label for="">
                         <span class="texto">CVC</span>
-                        <input type="text" class="input" id="inputCVC" placeholder="e.g. 123" maxlength="3" required>
-                        <span class="erro">mensagem de erro!</span>
+                        <input type="text" class="input" id="inputCVC" placeholder="e.g. 123" minlength="3" maxlength="3" required oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*?)\..*/g, '$1');">
+                        <span class="erro">mensagem!</span>
                     </label>
                 </div>
-                <button class="btn" id="btnConfirme">Confirm</button>
+                <button type="submit" class="btn" id="btnConfirme">Confirm</button>
             </form>
         </section>
 
@@ -57,7 +57,7 @@
             <div class="cartao cartao-verso">
                 <span class="seguranca-cartao" id="segurancaCartao">000</span>
             </div>
-            
+
             <div class="cartao cartao-frente">
                <img src="./assets/images/card-logo.svg" class="logo" alt="logo cartao">
 
